--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.513.0",
     "quill": "^2.0.3",
